# Rectangles_Packing

./: CMakeLists.txt  README.md
config/: rectangles.txt
include/: RectLoader.h
src/: RectLoader.cpp  rect_packing.cpp
